--- a/app/src/main/res/layout/activity_edit_store.xml
+++ b/app/src/main/res/layout/activity_edit_store.xml
@@ -10,8 +10,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:layout_height="wrap_content"
+        android:background="#fc9c46"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="編輯店家"
@@ -24,19 +24,26 @@
         <!-- The main content view -->
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#f5c59a">
 
             <RelativeLayout
                 android:id="@+id/content_frame"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="18dp"
-                android:paddingRight="18dp">
+                android:paddingBottom="18dp"
+                android:paddingEnd="18dp"
+                android:paddingStart="18dp"
+                android:paddingTop="18dp">
 
                 <TableLayout
                     android:id="@+id/tableLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
+                    ////////////////////////////////////////////////////
+
+                    //////////////////////////////////////////////////////////////
 
                     <TableRow
                         android:layout_width="match_parent"
@@ -49,19 +56,30 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="@string/password"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="@dimen/font_size" />
 
                         <EditText
                             android:id="@+id/passwordEditText"
                             android:layout_width="0dp"
-                            android:layout_height="45dp"
+                            android:layout_height="29dp"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="3"
+                            android:background="@drawable/text_background"
                             android:ems="10"
                             android:hint="欲修改資料請填寫密碼"
-                            android:inputType="textPassword" />
+                            android:inputType="textPassword"
+                            android:paddingEnd="10dp"
+                            android:paddingStart="10dp"
+                            android:textColor="#59493f" />
+
                     </TableRow>
-                    ////////////////////////////////////////////////////
+
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -73,19 +91,25 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="@string/NewPassword"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="@dimen/font_size" />
 
                         <EditText
                             android:id="@+id/NewPasswordEditText"
                             android:layout_width="0dp"
-                            android:layout_height="45dp"
+                            android:layout_height="29dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="3"
+                            android:background="@drawable/text_background"
                             android:ems="10"
                             android:hint="若無需修改密碼請留白"
-                            android:inputType="textPassword" />
+                            android:inputType="textPassword"
+                            android:paddingEnd="10dp"
+                            android:paddingStart="10dp"
+                            android:textColor="#59493f" />
                     </TableRow>
-//////////////////////////////////////////////////////////////
+
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -97,17 +121,23 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="@string/passwordCheck"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="@dimen/font_size" />
 
                         <EditText
                             android:id="@+id/passwordCheckEditText"
                             android:layout_width="0dp"
-                            android:layout_height="45dp"
+                            android:layout_height="29dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="3"
+                            android:background="@drawable/text_background"
                             android:ems="10"
                             android:hint="若無需修改密碼請留白"
-                            android:inputType="textPassword" />
+                            android:inputType="textPassword"
+                            android:paddingEnd="10dp"
+                            android:paddingStart="10dp"
+                            android:textColor="#59493f" />
                     </TableRow>
                     //////////////////////////////////////////
 
@@ -122,16 +152,22 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="@string/storeName"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="@dimen/font_size" />
 
                         <EditText
                             android:id="@+id/nameEditText"
                             android:layout_width="0dp"
-                            android:layout_height="45dp"
+                            android:layout_height="29dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="3"
+                            android:background="@drawable/text_background"
                             android:ems="10"
-                            android:inputType="textPersonName" />
+                            android:inputType="textPersonName"
+                            android:paddingEnd="10dp"
+                            android:paddingStart="10dp"
+                            android:textColor="#59493f" />
                     </TableRow>
 
                     <TableRow
@@ -145,16 +181,22 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="@string/storeAddress"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="@dimen/font_size" />
 
                         <EditText
                             android:id="@+id/addressEditText"
                             android:layout_width="0dp"
-                            android:layout_height="45dp"
+                            android:layout_height="29dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="3"
+                            android:background="@drawable/text_background"
                             android:ems="10"
-                            android:inputType="textPersonName" />
+                            android:inputType="textPersonName"
+                            android:paddingEnd="10dp"
+                            android:paddingStart="10dp"
+                            android:textColor="#59493f" />
                     </TableRow>
 
                     <TableRow
@@ -168,16 +210,22 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="@string/phone"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="@dimen/font_size" />
 
                         <EditText
                             android:id="@+id/phoneEditText"
                             android:layout_width="0dp"
-                            android:layout_height="45dp"
+                            android:layout_height="29dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="3"
+                            android:background="@drawable/text_background"
                             android:ems="10"
-                            android:inputType="phone" />
+                            android:inputType="phone"
+                            android:paddingEnd="10dp"
+                            android:paddingStart="10dp"
+                            android:textColor="#59493f" />
                     </TableRow>
 
                     <TableRow
@@ -191,42 +239,57 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="@string/bussinessTime"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="@dimen/font_size" />
 
                         <EditText
                             android:id="@+id/time1EditText"
                             android:layout_width="0dp"
-                            android:layout_height="45dp"
+                            android:layout_height="29dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="1.3"
+                            android:background="#FFFFFF"
                             android:ems="10"
                             android:focusable="true"
                             android:focusableInTouchMode="true"
                             android:inputType="none"
-                            android:textAlignment="center" />
+                            android:paddingEnd="10dp"
+                            android:paddingStart="10dp"
+                            android:textAlignment="center"
+                            android:textColor="#59493f" />
 
                         <TextView
                             android:id="@+id/textView"
-                            android:layout_width="1dp"
-                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
                             android:layout_weight="0.4"
+                            android:paddingBottom="8dp"
+                            android:paddingTop="8dp"
                             android:text="~"
                             android:textAlignment="center"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="14sp" />
 
                         <EditText
                             android:id="@+id/time2EditText"
                             android:layout_width="0dp"
-                            android:layout_height="45dp"
+                            android:layout_height="29dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="1.3"
+                            android:background="#FFFFFF"
                             android:ems="10"
                             android:focusable="true"
                             android:focusableInTouchMode="true"
                             android:inputType="none"
-                            android:textAlignment="center" />
+                            android:paddingEnd="10dp"
+                            android:paddingStart="10dp"
+                            android:textAlignment="center"
+                            android:textColor="#59493f" />
 
                     </TableRow>
+
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -241,36 +304,51 @@
                         <EditText
                             android:id="@+id/time3EditText"
                             android:layout_width="0dp"
-                            android:layout_height="45dp"
+                            android:layout_height="29dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="1.3"
+                            android:background="#FFFFFF"
                             android:ems="10"
                             android:focusable="true"
                             android:focusableInTouchMode="true"
                             android:inputType="none"
-                            android:textAlignment="center" />
+                            android:paddingEnd="10dp"
+                            android:paddingStart="10dp"
+                            android:textAlignment="center"
+                            android:textColor="#59493f" />
 
                         <TextView
                             android:id="@+id/textView2"
-                            android:layout_width="1dp"
-                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
                             android:layout_weight="0.4"
+                            android:paddingBottom="8dp"
+                            android:paddingTop="8dp"
                             android:text="~"
                             android:textAlignment="center"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="14sp" />
 
                         <EditText
                             android:id="@+id/time4EditText"
                             android:layout_width="0dp"
-                            android:layout_height="45dp"
+                            android:layout_height="29dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="1.3"
+                            android:background="#FFFFFF"
                             android:ems="10"
                             android:focusable="true"
                             android:focusableInTouchMode="true"
                             android:inputType="none"
-                            android:textAlignment="center" />
+                            android:paddingEnd="10dp"
+                            android:paddingStart="10dp"
+                            android:textAlignment="center"
+                            android:textColor="#59493f" />
 
                     </TableRow>
+
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -282,7 +360,7 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="@string/storeInfo"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="@dimen/font_size" />
 
                         <TextView
@@ -295,19 +373,23 @@
                             android:textColor="@color/wallet_link_text_light"
                             android:textSize="@dimen/font_size"
                             android:textStyle="italic" />
+
                     </TableRow>
 
                 </TableLayout>
 
-
-                <Button
+                <ImageButton
                     android:id="@+id/completeButton"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
+                    android:layout_height="53dp"
                     android:layout_below="@+id/tableLayout"
-                    android:layout_weight="1"
-                    android:text="@string/next" />
+                    android:layout_marginTop="8dp"
+                    android:background="#00FFFFFF"
+                    android:padding="5dp"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/nextstep" />
+
+
             </RelativeLayout>
         </ScrollView>
 
