--- a/app/src/main/res/layout/activity_check_store_error.xml
+++ b/app/src/main/res/layout/activity_check_store_error.xml
@@ -69,7 +69,7 @@
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
                         android:layout_marginTop="10dp"
-                        android:text="查看被回報店家"
+                        android:text="查看店家"
                         android:textColor="@color/wallet_link_text_light"
                         android:textSize="18sp" />
 
