--- a/app/src/main/res/layout/activity_2_check_storeinfonew.xml
+++ b/app/src/main/res/layout/activity_2_check_storeinfonew.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
@@ -337,7 +337,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
                         android:layout_weight="0"
-                        android:background="@drawable/store_layout2"
+                        android:background="#f5c59a"
                         android:orientation="horizontal"
                         android:weightSum="1">
 
